Fix menu on firefox

--- a/css/app.css
+++ b/css/app.css
@@ -92,56 +92,61 @@ body{
     margin: 14px 10px;
     display: inline-block;
     overflow: hidden;
-    text-align: center;
+
     width: 64px;
     height: 44px;
-
     pointer-events: none;
+
+}
+
+.card-menu .menu-item.active{
+    pointer-events: all;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 64px;
+    height: 44px;
     perspective: 1000px;
 }
-.card-menu .menu-item.selected{
-    border-color: #ffdb55;
+
+.flip-card img{
+    width: 64px;
+    height: 44px;
 }
-.card-menu .menu-item .flip-card-inner {     /* This container is needed to position the front and back side */
+
+.flip-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 0.6s;
     transform-style: preserve-3d;
 }
 
-.card-menu .menu-item.active .flip-card-inner{
+.card-menu .menu-item.active .flip-card .flip-card-inner{
     transform: rotateY(180deg);
-    pointer-events: all;
 }
 
-.card-menu .menu-item .flip-card-front,
-.card-menu .menu-item .flip-card-back {
+.flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
 
-/* Style the front side (fallback if image is missing) */
-.card-menu .menu-item .flip-card-back {
+.flip-card-front {
     background-color: #bbb;
     color: black;
 }
 
-/* Style the back side */
-.card-menu .menu-item .flip-card-front{
-    background-color: dodgerblue;
+.flip-card-back {
+    background-color: #2980b9;
     color: white;
     transform: rotateY(180deg);
 }
 
-.card-menu .menu-item img{
-    height: 40px;
-
-}
 
 #homelink{
     position: absolute;
